# stm-log

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt.orig  README.md  b1 Debug.launch  cubeide-gcc.cmake  linker.ld
Core/Sources/: main.c  startup.s
